# chess-robot-arm

./: .gitignore  README.md  pyproject.toml
docs/: BOM.md  GENERAL_SPEC.md
firmware/: chess_arm_controller.ino
src/chess_actuators/: M8_SPEC.md  __init__.py  actuator_calibration.py  actuator_driver.py  actuator_executor.py  actuator_main.py  actuator_protocol.py  actuator_types.py
src/chess_brain/: M4_M5_SPEC.md  README.md  __init__.py  brain_main.py  brain_types.py  decision_engine.py  display.py  game_state.py  io_adapter.py  main.py  vision_stub.py
src/chess_calibration/: M0_SPEC.md  __init__.py  calibration_geometry.py  calibration_io.py  calibration_main.py  calibration_types.py  calibration_visualizer.py
src/chess_kinematics/: M7_SPEC.md  __init__.py  kinematics_ik.py  kinematics_map.py  kinematics_planner.py  kinematics_types.py
src/chess_planner/: M6_SPEC.md  __init__.py  movement_planner.py  movement_types.py
src/chess_vision/: M2_M3_SPEC.md  README.md  __init__.py  board_detector.py  camera_capture.py  main.py  orientation.py  piece_classifier.py  pipeline.py  square_mapper.py  types.py  vision_main.py  vision_types.py  vision_visualizer.py
tests/: test_board_detector.py  test_decision_engine.py  test_game_state.py  test_io_adapter.py  test_orientation.py  test_piece_classifier.py  test_pipeline.py  test_square_mapper.py
tests/fixtures/: boards.py
tests/test_actuators/: test_actuator_calibration.py  test_actuator_driver.py  test_actuator_executor.py  test_actuator_main.py  test_actuator_protocol.py  test_actuator_types.py
tests/test_actuators/fixtures/: sample_calibration.yaml  sample_trajectory.py
tests/test_brain/: test_decision_engine.py  test_game_state.py  test_io_adapter.py
tests/test_calibration/: test_calibration_geometry.py  test_calibration_io.py  test_calibration_main.py
tests/test_calibration/fixtures/: calibration_map.json  sample_calibration.yaml
tests/test_kinematics/: test_kinematics_ik.py  test_kinematics_map.py  test_kinematics_planner.py
tests/test_kinematics/fixtures/: sample_joint_map.py
tests/test_planner/: test_movement_planner.py
tests/test_planner/fixtures/: move_results.py
tests/test_vision/: test_board_detector.py  test_piece_classifier.py  test_pipeline.py
tests/test_vision/fixtures/: fake_yolo.py
training/: train_board_detector.py  train_piece_classifier.py
