[project]
name = "chess-robot-arm"
version = "0.1.0"
description = "Módulos de Estado del Juego y Motor de Decision para brazo robótico de ajedrez"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chess>=1.11.2",
]

[project.scripts]
chess-brain = "chess_brain.main:run"

[tool.poe.tasks]
chess-test = "pytest tests/ --cov=src/chess_brain -v"

[dependency-groups]
dev = [
    "poethepoet>=0.46.0",
    "pytest>=9.1.1",
    "pytest-cov>=7.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/chess_brain"]
