[project]
name = "chess-robot-arm"
version = "0.1.0"
description = "Módulos de Estado del Juego y Motor de Decision para brazo robótico de ajedrez"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chess>=1.11.2",
    "dill>=0.4.1",
    "numpy>=2.5.1",
    "opencv-python>=5.0.0.93",
    "requests>=2.34.2",
    "ultralytics>=8.4.92",
]

[project.scripts]
chess-brain = "chess_brain.brain_main:run"
chess-vision = "chess_vision.vision_main:run"

[tool.poe.tasks]
chess-test-brain = "pytest tests/test_brain/ --cov=src/chess_brain -v"
chess-test-vision = "pytest tests/test_vision/ --cov=src/chess_vision -v"
chess-test = "pytest tests/ --cov=src/ -v"

[dependency-groups]
dev = [
    "poethepoet>=0.46.0",
    "pytest>=9.1.1",
    "pytest-cov>=7.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = [
    "src/chess_brain",
    "src/chess_vision"
]
