[project]
name = "chess-robot-arm"
version = "0.1.0"
description = "Módulos de Estado del Juego y Motor de Decision para brazo robótico de ajedrez"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chess>=1.11.2",
    "dill>=0.4.1",
    "numpy>=2.5.1",
    "opencv-python>=5.0.0.93",
    "pyserial>=3.5",
    "pyyaml>=6.0.3",
    "requests>=2.34.2",
    "ultralytics>=8.4.92",
]

[project.scripts]
chess-brain = "chess_brain.brain_main:run"
chess-vision = "chess_vision.vision_main:run"
chess-calibration = "chess_calibration.calibration_main:run"
chess-actuators = "chess_actuators.actuator_main:main"

[tool.poe.tasks]
chess-test-brain = "pytest tests/test_brain/ --cov=src/chess_brain -v"
chess-test-vision = "pytest tests/test_vision/ --cov=src/chess_vision -v"
chess-test-planner = "pytest tests/test_planner/ --cov=src/chess_planner -v"
chess-test-calibration = "pytest tests/test_calibration/ --cov=src/chess_calibration -v"
chess-test-kinematics = "pytest tests/test_kinematics/ --cov=src/chess_kinematics -v"
chess-test-actuators = "pytest tests/test_actuators --cov=src/chess_actuators"
chess-test = "pytest tests/ --cov=src/ -v"

[dependency-groups]
dev = [
    "poethepoet>=0.46.0",
    "pytest>=9.1.1",
    "pytest-cov>=7.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = [
    "src/chess_brain",
    "src/chess_vision"
]
